changes done accordingly

--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -1,5 +1,5 @@
 <div style="max-width:50" *ngIf="this.role!='Admin' or this.role!='financial-analyst' ">
-<button class="birdButton" (click)="goToUrl('individual-user/individual-user-application')">Apply Here</button>
+<button class="birdButton" (click)="checkuser()">Apply Here</button>
 </div>
 
 <div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
