--- a/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
+++ b/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
@@ -4,45 +4,45 @@
 <mat-horizontal-stepper linear #stepper class="centered" style="margin-left: 54%; margin-top:-39.5%"> 
   <mat-step [stepControl]="firstFormGroup" >
     <form [formGroup]="firstFormGroup">
-      <ng-template matStepLabel>Your Credit Details</ng-template>
+      <ng-template matStepLabel style="font-size: large;color: black;">Your Credit Details</ng-template>
       <mat-form-field>
 
-    <mat-label>Pan Card</mat-label>
+    <mat-label style="font-size: large;color: black;">Pan Card</mat-label>
         <input matInput placeholder="Pancard" formControlName="pancard" pattern="(^([a-zA-Z]{5})([0-9]{4})([a-zA-Z]{1})$)" required>
       </mat-form-field><br>
 
       <mat-form-field>
-        <mat-label>Loan Amount</mat-label>
+        <mat-label style="font-size: large;color: black;">Loan Amount</mat-label>
         <input matInput type="number" placeholder="Loan Amount" formControlName="loanAmount" required>
       </mat-form-field><br>
 
       <mat-form-field>
-        <mat-label>Tenure</mat-label>
+        <mat-label style="font-size: large;color: black;">Tenure</mat-label>
         <input matInput type="number" placeholder="Repayment Duration" formControlName="loanTenure" required>
       </mat-form-field><br>
 
       <mat-form-field>
-        <mat-label>Age of Bussiness</mat-label>
+        <mat-label style="font-size: large;color: black;">Age of Bussiness</mat-label>
         <input matInput type="number" placeholder="Your business age" formControlName="businessAge" required>
       </mat-form-field><br>
 
       <mat-form-field>
-        <mat-label>Number of Employees</mat-label>
+        <mat-label style="font-size: large;color: black;">Number of Employees</mat-label>
         <input matInput type="number" placeholder="Your total employees" formControlName="employeeCount" required>
       </mat-form-field><br>
 
       <mat-form-field>
-        <mat-label>Company License Number</mat-label>
+        <mat-label style="font-size: large;color: black;">Company License No.</mat-label>
         <input matInput  placeholder="Company's license number" formControlName="licenseNumber" required>
       </mat-form-field><br>
 
       <mat-form-field>
-        <mat-label>Revenue</mat-label>
+        <mat-label style="font-size: large;color: black;">Revenue</mat-label>
         <input matInput placeholder="Revenue" formControlName="revenue" required>
       </mat-form-field><br>
 
       <mat-form-field>
-        <mat-label> Type of organization</mat-label>
+        <mat-label style="font-size: large;color: black;"> Organization type</mat-label>
         <mat-select [(value)]="selected" formControlName="organizationType" required>
           <mat-option>None</mat-option>
           <mat-option value="Limited Company">Limited Company</mat-option>
@@ -57,46 +57,46 @@
       
 
       <div>
-        <button mat-raised-button matStepperNext>Next</button>
+        <button mat-raised-button matStepperNext style="font-size: large;color: black;">Next</button>
       </div>
     </form>
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
-      <ng-template matStepLabel>Answer the Questionnaire</ng-template>
+      <ng-template matStepLabel style="font-size: large;color: black;">Answer the Questionnaire</ng-template>
 
 
                       <div class="wrap-input100">   
-                          <label style="margin:20px">  Do you have any past criminal records: </label><br>
+                          <label style="margin:20px">Is organization/company in the past or presently subject to an indictment, arraignment, or other means by which formal criminal charges are brought in any jurisdiction?</label><br>
                               <input type="radio" class="toggle" name="criminalRecord" formControlName="criminalRecord" value=0 style="margin:15px">  No  
                               <input type="radio" class="toggle" name="criminalRecord" formControlName="criminalRecord" value=1 style="margin:15px">  Yes <br>
                               <span class="focus-input100"></span>
                       </div>
 
                       <div class="wrap-input100">   
-                          <label style="margin:20px">  Are you Bankrupt: </label><br>
+                          <label style="margin:20px"> Is organization/company ever declared Bankrupt from Bank or other legal financial organisation ? </label><br>
                               <input type="radio" class="toggle" name="bankruptcy" formControlName="bankruptcy" value=0 style="margin:15px" required>  No  
                               <input type="radio" class="toggle" name="bankruptcy" formControlName="bankruptcy" value=1 style="margin:15px" required>  Yes <br>
                               <span class="focus-input100"></span>
                       </div>
 
       <div>
-        <button mat-raised-button matStepperPrevious>Back</button>
-        <button mat-raised-button matStepperNext [disabled]="!secondFormGroup.valid">submit</button>
+        <button mat-raised-button matStepperPrevious style="font-size: large;color: black;">Back</button>
+        <button mat-raised-button matStepperNext [disabled]="!secondFormGroup.valid" style="font-size: large;color: black;">submit</button>
       </div>
     </form>
   </mat-step>
   <mat-step>
-    <ng-template matStepLabel>Done</ng-template>
+    <ng-template matStepLabel style="font-size: large;color: black;">Done</ng-template>
     <div><br>
-      <h2>You are all set and ready to rock!</h2><br>
-      <h3>We will take the information submitted by you at during the registration <br> as your personal information</h3>
+      <h2>You are all set and ready to get your amount!</h2><br>
+      <h3>We will take the information submitted by you at during the registration <br> as your personal information.</h3>
       <h3>Our representative will mail you shortly regarding your application status.</h3>
-      <h3>Once your application is approved, you will get a mail listing all the essential <br> 
-      documents required, please visit your nearest branch with those documents,<br>
-      along with original copy of your pancard and photo Id</h3>
+      <h3>Once your application is approved, you will get a mail listing all the essential 
+      documents required, please visit your nearest branch with those documents,
+      along with original copy of your pancard and photo id.</h3>
 <br><br>
-      <button mat-raised-button (click)="apply()">Confirm</button>
+      <button mat-raised-button (click)="apply()" style="font-size: large;color: black;">Confirm</button>
       <h6>By clicking this button you accept our terms and conditions*</h6>
       <h6>and ensure that all the details entered by you is correct, and take the liablities further actions if otherwise.</h6>
     </div>
