removed Forgot password link and disable the link in reset password when user has log in

--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -120,9 +120,13 @@
                 
             
             <div class="row">
-                <div class="col-md-12">
-                 New user? <a href="/register">Register</a><br>
-                 Already registered?<a href="/login">Login</a>
+              <div *ngIf="this.storeRole==null and this.store==null" class="col-md-12">
+                  New user? <a href="/register">Register</a><br>
+                  Already registered?<a href="/login">Login</a>
+               </div>
+            <div *ngIf="this.storeRole!=null and this.store!=null" class="col-md-12">
+              New user? <a  class="isDisabled" href="/register">Register</a><br>
+              Already registered?<a class="isDisabled" href="/login">Login</a>
             </div>
             </div>
             </div>
