--- a/Creditz-Angular-src/app/reset-password/reset-password.component.css
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.css
@@ -140,6 +140,12 @@
   z-index: 1;
   margin-bottom: 5%;
 }
+.isDisabled{
+  color:currentColor;
+  cursor:not-allowed;
+  opacity:0.5;
+  text-decoration:none;
+}
 
 div.form{
 display:block;
