update-url changes-security

--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -9,20 +9,20 @@
   <div class="collapse navbar-collapse" id="navbarToggler">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="home" >      Home  </a>
+        <a class="nav-link" href="creditz/home" >      Home  </a>
       </li>
             
       <li class="nav-item" *ngIf="showInHeader()">
-        <a class="nav-link" href="user-history">     Applications  </a>
+        <a class="nav-link" href="creditz/history">     Applications  </a>
       </li>
 
 
      <li class="dropdown" >
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="policy">  Our Policies  </a>
           <div class="dropdown-menu" aria-labelledby="policy">
-            <a class="dropdown-item" href="individual-user">Individual Policies</a>
+            <a class="dropdown-item" href="creditz/individual">Individual Policies</a>
              <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="organization-user-calculator">Organizational Policies</a>
+            <a class="dropdown-item" href="creditz/organization">Organizational Policies</a>
           </div>
       </li>  
 
