--- a/Creditz-Angular-src/app/home/home.component.html
+++ b/Creditz-Angular-src/app/home/home.component.html
@@ -11,7 +11,7 @@
 <font size="32" style="text-align:middle; vertical-align: middle;"  >C₹ED!TZ  </font><br>
 <font size="4" style="text-align:middle; vertical-align: middle;"  ><a href="#aboutUs">About Us  </a></font>
 <font size="4" style="text-align:middle; vertical-align: middle;"  >|</font>
-<font size="4" style="text-align:middle; vertical-align: middle;"  ><a href="contactUs"> Contact Us </a></font>
+<font size="4" style="text-align:middle; vertical-align: middle;"  ><a href="creditz/contactUs"> Contact Us </a></font>
 
 
   </span>
