--- a/Creditz-Angular-src/app/adminsidenav/adminsidenav.component.html
+++ b/Creditz-Angular-src/app/adminsidenav/adminsidenav.component.html
@@ -1,7 +1,7 @@
  <div *ngIf="this.storeRole=='Admin' and this.store!=null">
     <mat-sidenav-container>
     
-        <mat-sidenav #start mode="side" opened >
+        <mat-sidenav mode="side" opened >
                 <mat-nav-list>
                 <div class="profile-card">
                     <img width:200px
