--- a/Creditz-Angular-src/app/financial-analyst/creditor-table-list/creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/financial-analyst/creditor-table-list/creditor-table-list.component.html
@@ -52,8 +52,8 @@
       </ng-container>
 
       <ng-container matColumnDef="emailStatus">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Email Status </mat-header-cell>
-        <mat-cell *matCellDef="let application"> {{application.applicationStatus}}</mat-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Email Status </mat-header-cell>
+        <mat-cell *matCellDef="let application"> {{application.emailStatus}}</mat-cell>
       </ng-container>
   
       <ng-container matColumnDef="loading">
@@ -71,7 +71,7 @@
   <mat-paginator [length]="length"
                  [pageSize]="pageSize"
                  [pageSizeOptions]="pageSizeOptions"
-                 (page)="pageEvent=$event">
+                 >
  </mat-paginator>
   
   </div>
