--- a/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.html
@@ -53,8 +53,9 @@
 
       <ng-container matColumnDef="emailStatus">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Email Status </mat-header-cell>
-        <mat-cell *matCellDef="let application"> {{application.applicationStatus}}</mat-cell>
+        <mat-cell *matCellDef="let application"> {{application.emailStatus}}</mat-cell>
       </ng-container>
+
   
       <ng-container matColumnDef="loading">
         <mat-footer-cell *matFooterCellDef colspan="6">
@@ -71,7 +72,7 @@
   <mat-paginator [length]="length"
                  [pageSize]="pageSize"
                  [pageSizeOptions]="pageSizeOptions"
-                 (page)="pageEvent=$event">
+                 >
  </mat-paginator>
   
   </div>
