--- a/Creditz-Angular-src/app/about-us/about-us.component.html
+++ b/Creditz-Angular-src/app/about-us/about-us.component.html
@@ -39,12 +39,12 @@ ABOUT Organizational User Policies(key points)<br>
                 <article class="orange-box">
                     <div class="row row2col">
                         <div class="col-md-6 col-left">
-                            <p>Creditz is a self owned product, created to help companies to identify and choose their audience to which we can provide loan, meticulasly.</p>
-                            <p>Some of the biggest brains of our company employeed very acute and incisive approach to understand what are the risk an organizations might face whilst providing loans to any individual or any well established organization, and we had craeted an algorith which promise to provide 99% safety to the loan providers.</p>
-                            <p></p>
+                            <p>Creditz is a self-owned product, created to help companies to identify and choose their audience to which we can provide a loan, meticulously.</p>
+                            <p>Some of the biggest brains of our company employed a very acute and incisive approach in understanding what the risk organizations are might face while providing loans to any individual or any well-established organization.
+                            </p><p></p>
                         </div>
                         <div class="col-md-6 col-right">
-                            <p>  I am thinking that, we can write the problem statement here! </p>
+                            <p>  We had created an algorithm that promises to deliver 99% safety to the loan providers.</p>
                             <p><i>Happy Loaning!</i></p>
                         </div>
                 </div></article>
