--- a/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
+++ b/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
@@ -66,7 +66,12 @@
                     <div *ngIf="this.secondFormGroup.controls['password'].value==''" 
                     class="text-danger">
                     <small> Password is required of length of 8 characters</small>
+                    <small *ngIf="this.secondFormGroup.controls['password'].invalid">
+                    Please enter a correct password
+                   </small>      
+
                     </div>
+  
                     </mat-form-field>
                     <br>
                   
