--- a/Creditz-Angular-src/app/applicant-profile/applicant-profile.component.html
+++ b/Creditz-Angular-src/app/applicant-profile/applicant-profile.component.html
@@ -1,17 +1,6 @@
 <div *ngIf="this.storeRole=='Person' and this.store!=null">
     <!DOCTYPE html>
-    <html>
-    <head>
-        <title>Profile Page</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <style type="text/css">
-            
-        </style>
-    </head>
-    <body>
+
     <div class="container emp-profile">
         <form method="post">
             <div class="row">
@@ -37,9 +26,9 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="profile-work">
-                       <p>Additional Details</p> 
-                        <a href="user-history">Applications</a><br/>
-                        <a href="reset-password">Change Password</a><br/>
+                       <p>Additional Details</p> <br><br>
+                        <a href="user-history">Applications</a><br><br>
+                        <a href="reset-password">Change Password</a><br>
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -99,27 +88,14 @@
                                     </div>
                         </div>
 
-                    <!-- <!-- </div> -->
                 </div>
             </div>
         </form>           
     </div>
     
-    </body>
-    </html>
-    </div>
+   </div>
     
     <div *ngIf="this.storeRole=='Organization'and this.store!=null">
-    <!DOCTYPE html>
-        <html>
-        <head>
-            <title>Profile Page</title>
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        </head>
-        <body>
         <div class="container emp-profile">
             <form method="post">
                 <div class="row">
@@ -224,7 +200,5 @@
             </form>           
     </div>
         
-        </body>
-        </html>
-    
+  
     </div>
