--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -56,16 +56,11 @@
 													</div>
 																				<br>	
 													<div class="text-center p-t-136">
-														<a class="txt2" href="register" style="padding-right: 15%; margin-left:0px">
+														<a class="txt2" href="register" >
 															Create your Account       
 															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 														</a>
 
-														<a class="txt2" href="reset-password">
-															      Change Password
-															<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-														</a>
-														
 													</div>
 										</div>
 								</form>
