--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -16,14 +16,14 @@
                                  
                                   class="form-control"  type="email"
                                   (change)="emailCheckUnique()"
-                                  pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                                  pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$"
                                   [class.is-invalid]="email.invalid && email.touched"
                                   name="pemail" 
                                   [(ngModel)]="userModel1.userEmail"
                                   placeholder="Email Address" 
                                   required>
                                   <br>
-
+                                    
                                   <div *ngIf="email.invalid && (email.dirty || email.touched)"
                                   class="text-danger">
                                   
@@ -39,14 +39,13 @@
                                   </div>
                                 </div>
                             </div>
-                               
+                           
                            
                             
                                 <div class="wrap-input100 ">
                                             <input type="password" 
                                             class="form-control"
                                             #oldpassword="ngModel" 
-                                            pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}" 
                                             [class.is-invalid]="oldpassword.invalid && oldpassword.touched"
                                             name="password" 
                                             required id="t4"
@@ -118,18 +117,7 @@
                           </div>
                    
                 
-            
-            <div class="row">
-              <div *ngIf="this.storeRole==null and this.store==null" class="col-md-12">
-                  New user? <a href="/register">Register</a><br>
-                  Already registered?<a href="/login">Login</a>
-               </div>
-            <div *ngIf="this.storeRole!=null and this.store!=null" class="col-md-12">
-              New user? <a  class="isDisabled" href="/register">Register</a><br>
-              Already registered?<a class="isDisabled" href="/login">Login</a>
-            </div>
-            </div>
-            </div>
+             </div>
         </div>
 </div>
 </div>
