--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -31,7 +31,7 @@
           <div class="dropdown-menu" aria-labelledby="policy">
             <a class="dropdown-item" href="register">New User, Sign Up</a>
              <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="login">Alredy have an Account</a>
+            <a class="dropdown-item" href="login">Already have an Account</a>
           </div>
       </li>  
 
