--- a/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
+++ b/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
@@ -74,7 +74,7 @@
                       </div>
 
                       <div class="wrap-input100">   
-                          <label style="margin:20px"> Is organization/company ever declared Bankrupt from Bank or other legal financial organisation ? </label><br>
+                          <label style="margin:20px"> Is organization/company ever declared Bankrupt from Bank or other legal financial organization ? </label><br>
                               <input type="radio" class="toggle" name="bankruptcy" formControlName="bankruptcy" value=0 style="margin:15px" required>  No  
                               <input type="radio" class="toggle" name="bankruptcy" formControlName="bankruptcy" value=1 style="margin:15px" required>  Yes <br>
                               <span class="focus-input100"></span>
