--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -28,7 +28,7 @@
                                   class="text-danger">
                                   
                                   <small *ngIf="email.errors.pattern">
-                                               Enter the mail in the email format.
+                                               Oops! We are not able to find your email, please try with a valid Address.
                                   </small> 
                                   <small *ngIf="email.errors.required">
                                                 Email is required.
@@ -80,7 +80,7 @@
                                                 New Password is required.
                                                 </small>
                                                 <small *ngIf="password.errors.pattern">
-                                                At least 8 characters in length.
+                                                atleast 8 characters: one capital,lower,special,numeric each.
                                                 </small>      
                                                 </div>
                                                
