reset password and analyst Controller changes

--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -16,7 +16,7 @@
                                  
                                   class="form-control"  type="email"
                                   (change)="emailCheckUnique()"
-                                  pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$"
+                
                                   [class.is-invalid]="email.invalid && email.touched"
                                   name="pemail" 
                                   [(ngModel)]="userModel1.userEmail"
@@ -33,11 +33,9 @@
                                   <small *ngIf="email.errors.required">
                                                 Email is required.
                                   </small> 
-
-                                  <div *ngIf="emailAlreadyExist!=''" class="text-danger">
-                                    <small>{{emailAlreadyExist}} </small>
-                                  </div>
-                                </div>
+                                </div>         
+                                  
+                               
                             </div>
                            
                            
@@ -110,7 +108,7 @@
                                     
                                
                                 <div class="container-login100-form-btn">
-                                    <button type="submit"[disabled]="personForm.form.invalid||emailAlreadyExist!=''" class="login100-form-btn">Reset </button>
+                                    <button type="submit"[disabled]="personForm.form.invalid "class="login100-form-btn">Reset </button>
                                 </div>
                             </form>
 
