Angular- semi final check

--- a/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
+++ b/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
@@ -77,15 +77,14 @@
   <mat-step>
     <ng-template matStepLabel>Done</ng-template>
     <div><br>
-      <h2>You are all set and ready to rock!</h2><br>
-      <h3>We will take the information submitted by you at during the registration <br> as your personal information.</h3>
+      <h2>Viola! You are all set and ready to rock!</h2><br>
+      <h3>We take the information submitted by you during the registration as  <br> your personal information.</h3>
       <h3>Our representative will mail you shortly regarding your application status.</h3>
-      <h3>Once your application is approved, you will get a mail listing all the essential
-      documents required, please visit your nearest branch with those documents, along with original copy of your pancard and photo Id.</h3>
+      <h3>Once your application is approved, you will get a mail listing all the essential documents required; please visit your nearest branch with those documents, along with an original copy of your pan card and photo Id.</h3>
 <br><br>
       <button mat-raised-button (click)="apply()">Confirm</button>
-      <h6>By clicking this button you accept our terms and conditions*</h6>
-      <h6>and ensure that all the details entered by you is correct, and take the liablities further actions if otherwise.</h6>
+      <h6>By clicking this button, you accept our terms and conditions*</h6>
+      <h6>and ensure that all the details entered by you is correct, and take the liabilities further actions if otherwise.</h6>
     </div>
   </mat-step>
 </mat-horizontal-stepper>
