--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -21,8 +21,8 @@
                     <div class="row row2col">
                         <div class="col-md-6 col-left">
                             <p  style="color:white;"> 
-                              <i>With an interest rate of 11.5% we provide loans on flat EMI's, we help you shape your dreams, ideas and any startup plans into reality<br><br>
-                              We believe in giving the consumers a great experience, henceforth, we provide you the loan without security, 'unsecured' loans, is our policy to help our consumers to have an amazing loaning experience<br><br>
+                              <i>With an interest rate of 11.5% we provide loans on flat EMI's, we help you shape your dreams, ideas and any startup plans into reality.<br><br>
+                              We believe in giving the consumers a great experience, henceforth, we provide you the loan without security, 'unsecured' loans, is our policy to help our consumers to have an amazing loaning experience.<br><br>
                               We believe in you!!!<br><br>
                            Allow us to help you in building your empire; give us a chance.<br><br> Apply for the loan<i> Now!!!</i></i><br><br>
 
@@ -80,7 +80,6 @@
             <span [matTooltip] *ngIf="lessThan(calculatorModel.principle,3)">
                 The minimum acceptable tenure is 3 Months.
              </span>
-
     </div>
 
     <label aTilt><br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
