--- a/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
+++ b/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
@@ -16,18 +16,17 @@
               <div class="row row2col">
                 <div class="col-md-6 col-left">
                   <p  style="color:white;"> 
-                    <i> 1. Flat EMI</i><br><br>
-                    <i> 2. 13.5% interest rate on Organization Loan</i><br><br>
-                    <i> 3. Un-Secured loans- our policy to help our consumers to have an amzing loaning experiance</i><br><br>
+                    <i> 1. Flat EMI.</i><br><br>
+                    <i> 2. 13.5% interest rate on Organization Loan.</i><br><br>
+                    <i> 3. Un-Secured loans- our policy to help our consumers to have a fantastic loaning experience.</i><br><br>
                     <i>4. Loans for small organizations.</i><br><br>
-                    <i>5. Want to start Startup? We are here</i><br><br> 
+                    <i>5. Want to start a Startup? We are here!</i><br><br> 
                   </p>
                 </div>
                 <div class="col-md-6 col-right">
                   <p  style="color:white;">      
-                    <i> 6. What are our screening POLICY ?? Only require pan card ,
-                        for your application procedure,no more docs.</i><br><br>
-                    <i>7. Check your Emi by yourself before Applying! because we care about your credit score!</i><br>
+                    <i> 6. What are our screening POLICIES? Only require a pan card, to apply, no more documents.</i><br><br>
+                    <i>7. Check your EMI by yourself before Applying! Because we care about your credit score!</i><br>
                   </p>
                   <p  style="color:white;"><i>Happy Loaning!</i>
                   </p>
