--- a/Creditz-Angular-src/app/schedular/schedular.component.html
+++ b/Creditz-Angular-src/app/schedular/schedular.component.html
@@ -59,9 +59,9 @@
                   <button mat-button mat-raised-button color="primary"  (click)="personApplicantClick()">Individual Applications Status</button>
                    <button mat-button mat-raised-button color="primary"  (click)="organizationApplicantClick()">Organization Applications Status</button>
                 </mat-action-row>
-                <h1>Hey Admin,</h1>
-                <h4>On click on Individual Applications Status  you can trigger the schedular that sends application Status to person applicants.</h4>
-                <h4>On click on Organization Applications Status you can trigger the schedular that sends Application status to Organization applicants.</h4>
+                <h1>Hello Admin,</h1>
+                <h4>Click on "Individual Applications Status" to send out all the pending E-mails application status to "Person Applicants".</h4>
+                <h4>Click on "Organization Applications Status" to send out all the pending E-mail application status to "Organization applicants".</h4>
                 
               </mat-expansion-panel>
                 
