--- a/Creditz-Angular-src/app/footer/footer.component.html
+++ b/Creditz-Angular-src/app/footer/footer.component.html
@@ -19,9 +19,9 @@
                             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
                                 <h3 class="f-title f_600 t_color f_size_18">Download</h3>
                                 <ul class="list-unstyled f_list">
-                                    <li><a download="aboutUs" target="_blank" href="/assets/aboutUs.pdf">Our Brochure</a></li>
-                                    <li><a download="ProjectDetails" target="_blank" href="/assets/projectDetails.pdf">Project Details</a></li>
-                                    <li><a download="MyTask" target="_blank" href="/assets/myTask.pdf">My tasks</a></li>
+                                    <li><a download="aboutUs" target="_blank" href="/assets/aboutCreditz.pdf">Our Brochure</a></li>
+                                    <li><a download="ProjectDetails" target="_blank" href="/assets/CreditzDetail.pdf">Project Details</a></li>
+                                    <li><a download="MyTask" target="_blank" href="/assets/CreditzDetail.pdf">My tasks</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -29,9 +29,9 @@
                             <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
                                 <h3 class="f-title f_600 t_color f_size_18">Help</h3>
                                 <ul class="list-unstyled f_list">
-                                    <li><a download="MyTask" target="_blank" href="/assets/myTask.pdf">Reporting</a></li>
-                                    <li><a download="ProjectDetails" target="_blank" href="/assets/projectDetails.pdf">Documentation</a></li>
-                                    <li><a download="DatabaseConfiguration" target="_blank" href="/assets/DatabaseConfiguration.pdf">Privacy</a></li>
+                                    <li><a download="MyTask" target="_blank" href="/assets/CreditzDetail.pdf" >Reporting</a></li>
+                                    <li><a download="CreditzDetails" target="_blank"  href="/assets/CreditzDetail.pdf">Documentation</a></li>
+                                    <li><a download="ContactUs" target="_blank" href="/assets/contactUs.pdf">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
