--- a/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.html
@@ -46,6 +46,11 @@
         <mat-cell *matCellDef="let application"> {{application.loanTenure}}</mat-cell>
       </ng-container>
 
+      <ng-container matColumnDef="applicationDate">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Applied Date </mat-header-cell>
+        <mat-cell *matCellDef="let application"> {{application.applicationDate}}</mat-cell>
+      </ng-container>
+
       <ng-container matColumnDef="applicationStatus">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Application Status </mat-header-cell>
         <mat-cell *matCellDef="let application"> {{application.applicationStatus}}</mat-cell>
