--- a/Creditz-Angular-src/app/contact-us/contact-us.component.html
+++ b/Creditz-Angular-src/app/contact-us/contact-us.component.html
@@ -24,7 +24,7 @@ Email: info@creditz.co.in</h4><br>
 <div class="right">
 <br><h1>Departments</h1><br>
 <h4>customerservice@creditz.co.in<br>
-disputes@creditz.co.in<br>
+creditzworkmail@gmail.com<br>
 compliance@creditz.co.in<br>
 careers@creditz.co.in<br>
 </h4>
