--- a/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
+++ b/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
@@ -74,7 +74,7 @@
               class="input100" 
               placeholder="Loan Duration-Month" 
               name="tenure" 
-              [(ngModel)] = calculatorModel.tenure><br>
+              [(ngModel)] = calculatorModel.tenure>
               <span class="focus-input100">
               </span>
               <small [matTooltip] *ngIf="greaterThan(calculatorModel.tenure,100)" class="text-danger">
