--- a/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
+++ b/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
@@ -24,7 +24,7 @@
 
 
 <ng-container matColumnDef="contact">
-  <th mat-header-cell *matHeaderCellDef > Contact no </th>
+  <th mat-header-cell *matHeaderCellDef > Contact No </th>
   <td mat-cell *matCellDef="let element"> {{element.personId.contact}}</td>
 </ng-container>
 
@@ -88,11 +88,11 @@
         [@detailExpand]="element == expandedElement1 ? 'expanded' : 'collapsed'">
          
           <div class="example-element-description">
-            <h4> ApplicantId   :{{ element.applicationId }}</h4>
-            <h4> LoanAmount    :{{element.loanAmount}}</h4>
+            <h4> Applicant Id   :{{ element.applicationId }}</h4>
+            <h4> Loan Amount    :{{element.loanAmount}}</h4>
             <h4> Revenue       :{{element.revenue}}</h4>
            
-            <h4> Loan tenture  :{{element.loanTenure}}</h4>
+            <h4> Loan Tenure  :{{element.loanTenure}}</h4>
             <h4> Director Name :{{element.organizationId.directorName}}</h4>
           </div>
         </div>
@@ -114,7 +114,4 @@
 
 <div *ngIf="this.store==null">
 <app-login></app-login>
-</div> 
- 
-
-
+</div>
