--- a/Creditz-Angular-src/app/history/history.component.html
+++ b/Creditz-Angular-src/app/history/history.component.html
@@ -13,6 +13,13 @@
 
             <div class="example-container mat-elevation-z8">
                     <table mat-table [dataSource]="dataSource" matSort matSortActive="applicationId" matSortStart="desc" matSortDisableClear  align= "center">
+                   
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="date">
+                      <th mat-header-cell *matHeaderCellDef mat-header="date" style="color: darkblue"> Application Date </th>
+                      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+                    </ng-container>
+                   
                     <!-- Position Column -->
                     <ng-container matColumnDef="applicationId">
                       <th mat-header-cell *matHeaderCellDef mat-header="applicationId" style="color: darkblue"> Application Id </th>
