--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -62,24 +62,24 @@
    <div class="wrap-input100">
       <input type="number" class="input100"   placeholder="Loan Amount" name="principle" [(ngModel)] = calculatorModel.principle >
  						<span class="focus-input100"></span>
-             <span [matTooltip] *ngIf="greaterThan(calculatorModel.principle,150000)">
+             <small [matTooltip] *ngIf="greaterThan(calculatorModel.principle,150000)" class="text-danger">
                 The maximum amount is Rs. 15Lakhs.
-             </span>
-            <span [matTooltip] *ngIf="lessThan(calculatorModel.principle,10000)">
+             </small>
+            <small [matTooltip] *ngIf="lessThan(calculatorModel.principle,10000)" class="text-danger">
                 The minimum acceptable amount is Rs. 10 Thousands.
-             </span>
+             </small>
     </div>
 
 
     <div class="wrap-input100" >
       <input type="number" class="input100" placeholder="Loan Duration-Month" name="tenure" [(ngModel)] = calculatorModel.tenure>
   						<span class="focus-input100"></span>
-             <span [matTooltip] *ngIf="greaterThan(calculatorModel.tenure,100)">
+             <small [matTooltip] *ngIf="greaterThan(calculatorModel.tenure,100)" class="text-danger">
                 The maximum acceptable tenure is 100 Months.
-             </span>
-            <span [matTooltip] *ngIf="lessThan(calculatorModel.principle,3)">
+             </small>
+            <small [matTooltip] *ngIf="lessThan(calculatorModel.tenure,3)" class="text-danger">
                 The minimum acceptable tenure is 3 Months.
-             </span>
+             </small>
     </div>
 
     <label aTilt><br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
