--- a/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
@@ -95,11 +95,6 @@
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Loan Tenure</mat-header-cell>
                 <mat-cell *matCellDef="let application"> {{application.loanTenure}}</mat-cell>
               </ng-container>
-
-              <ng-container matColumnDef="applicationDate">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Applied Date </mat-header-cell>
-                <mat-cell *matCellDef="let application"> {{application.applicationDate}}</mat-cell>
-              </ng-container>
         
               <ng-container matColumnDef="applicationStatus">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Application Status </mat-header-cell>
@@ -126,7 +121,8 @@
           </table>
           <mat-paginator [length]="length"
                          [pageSize]="pageSize"
-                         [pageSizeOptions]="pageSizeOptions">
+                         [pageSizeOptions]="pageSizeOptions"
+                         >
           </mat-paginator>
           
           </div>
