--- a/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
+++ b/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
@@ -45,7 +45,7 @@
   <mat-sidenav-content>
      
     <div class="data-container mat-elevation-z12">
-      <h1>Registerd Analysts </h1>
+      <h1>Registered Analysts </h1>
         <div class="example-header">
             <mat-form-field floatLabel="never">
               <input matInput (keyup)="applyFilter($event.target.value)" [(ngModel)]="searchKey" placeholder="Search">
